zeit.cms changes
================

1.14 (unreleased)
-----------------

- Entfernen aus Channeln beim Zurückzeiehen funktionierte nicht zuverlässig
  (bug #4722).

- Access Keys für Checkin (^I) und Checkout (^O).

1.13 (2009-02-15)
-----------------

- Channel stehen nach dem Syndizieren nicht mehr unter den bearbeiteten
  Dokumenten.
- Neue Aktion beim Syndizieren: »Syndizieren ohne Relateds«.

1.12 (2009-02-11)
-----------------

- Einchecken schneller: Automatisches aktualisieren der Dokumente, die sich auf
  das eingecheckte Dokument beziehen passiert jetzt asynchron.

1.11 (2009-02-09)
-----------------

- WYSIWYG-Editor: Es ist nicht mehr möglich ein Video so einzufügen, dass es
  nach dem Speichern weg ist (Bug #4652).
- WYSIWYG-Editor: Es ist jetzt möglich auch nach der Video-Box Text einzugeben,
  wenn die Video-Box hinten an das Dokument angefügt wird.
- Die Checkbox »Tages-NL« ist jetzt bei neuen Objekten automatisch aktiviert.
- WYSIWYG-Editor: Beim Bearbeiten von Audio/Video steht jetzt »mit Info« statt
  »mit Links« zur Auswahl (Bug #4650).

1.10.2 (2009-02-05)
-------------------

- Selenium-Tests können jetzt die Product-Config setzten.

1.10.1 (2009-02-01)
-------------------

- Selenium-Tests in extra ZCML-File.
- Browsing-Location-View/-Adapter auf IContained registriert.
- Zope-Pakete aktualisiert + abhängige Änderungen
- Lightboxen für Keywords und Kopieren repariert (+Test!)

1.10 (2009-01-31)
-----------------

- Suche: Anzeigen wenn es erweiterte Kriterien gibt, die erweiterte Suche aber
  eingeklappt ist (Bug #4388).
- Suche: Der Dateiname wird jetzt angezeigt (Bug #4440).
- Sperren: Es wird wieder angezeigt wer ein Objekt gesperrt hat.
- Bei ausgecheckten Dokumenten gibt es jetzt eine Aktion um zu dem Original in
  der Dateiverwaltung zu kommen (Bug #4419).
- Anzeige beim Text-Type ist jetzt Preformatted (Bug #4446).

1.9.1 (2009-01-21)
------------------

- Unterstützung von zope.app.renderer 3.5.0