@@ -9,6 +9,9 @@ zeit.cms changes
 
 - Access Keys für Checkin (^I) und Checkout (^O).
 
+- Property für letzte inhaltliche Änderung, die beim Checkin gesetzt wird
+  (#4720).
+
 1.13 (2009-02-15)
 -----------------
 
